--- a/portfolio.html
+++ b/portfolio.html
@@ -27,10 +27,10 @@
           >
           <ul class="list nav-list">
             <li class="nav-list-item">
-              <a class="nav-link link current" href="./index.html">Studio</a>
+              <a class="nav-link link" href="./index.html">Studio</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-link link" href="./portfolio.html">Portfolio</a>
+              <a class="nav-link link current" href="./portfolio.html">Portfolio</a>
             </li>
             <li class="nav-list-item"><a class="nav-link link" href="">Contacts</a></li>
           </ul>
@@ -57,12 +57,17 @@
           <ul class="list portfolio-page-list">
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
-                <img
-                  src="/images/imgportfolio/bankapp.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-slides">
+                  <img
+                    src="/images/imgportfolio/bankapp.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="title-under-img">
                   <h2 class="title-projct">Banking App Interface Concept</h2>
                   <p class="section-filter">App</p>
@@ -71,12 +76,17 @@
             </li>
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
-                <img
-                  src="./images/imgportfolio/cashless.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-slides">
+                  <img
+                    src="./images/imgportfolio/cashless.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="title-under-img">
                   <h2 class="title-projct">Cashless Payment</h2>
                   <p class="section-filter">Marketing</p>
@@ -85,12 +95,13 @@
             </li>
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
-                <img
-                  src="./images/imgportfolio/meditaion.jpg"
-                  alt="Meditaion App"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-slides">
+                  <img src="./images/imgportfolio/meditaion.jpg" alt="Meditaion App" width="360" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="title-under-img">
                   <h2 class="title-projct">Meditaion App</h2>
                   <p class="section-filter">App</p>
@@ -99,12 +110,13 @@
             </li>
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
-                <img
-                  src="./images/imgportfolio/taxi.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-slides">
+                  <img src="./images/imgportfolio/taxi.jpg" alt="Taxi Service" width="360" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="title-under-img">
                   <h2 class="title-projct">Taxi Service</h2>
                   <p class="section-filter">Marketing</p>
@@ -113,12 +125,17 @@
             </li>
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
-                <img
-                  src="./images/imgportfolio/screen.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-slides">
+                  <img
+                    src="./images/imgportfolio/screen.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="title-under-img">
                   <h2 class="title-projct">Screen Illustrations</h2>
                   <p class="section-filter">Design</p>
@@ -127,12 +144,17 @@
             </li>
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
-                <img
-                  src="./images/imgportfolio/onlinecourses.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-slides">
+                  <img
+                    src="./images/imgportfolio/onlinecourses.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="title-under-img">
                   <h2 class="title-projct">Online Courses</h2>
                   <p class="section-filter">Marketing</p>
@@ -141,12 +163,17 @@
             </li>
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
-                <img
-                  src="./images/imgportfolio/instagram.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-slides">
+                  <img
+                    src="./images/imgportfolio/instagram.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="title-under-img">
                   <h2 class="title-projct">Instagram Stories Concept</h2>
                   <p class="section-filter">Design</p>
@@ -155,12 +182,13 @@
             </li>
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
-                <img
-                  src="./images/imgportfolio/organicfood.jpg"
-                  alt="Organic Food"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-slides">
+                  <img src="./images/imgportfolio/organicfood.jpg" alt="Organic Food" width="360" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="title-under-img">
                   <h2 class="title-projct">Organic Food</h2>
                   <p class="section-filter">Web Site</p>
@@ -169,12 +197,13 @@
             </li>
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
-                <img
-                  src="./images/imgportfolio/freshcoffee.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                  height="300"
-                />
+                <div class="overlay-slides">
+                  <img src="./images/imgportfolio/freshcoffee.jpg" alt="Fresh Coffee" width="360" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="title-under-img">
                   <h2 class="title-projct">Fresh Coffee</h2>
                   <p class="section-filter">Web Site</p>
