--- a/index.html
+++ b/index.html
@@ -111,11 +111,7 @@
           <ul class="list section-we-are-doing-list">
             <li class="we-are-doing-list">
               <img
-                class="we-are-doing-img"
-                src="./images/computer.jpg"
-                alt="computer"
-                width="360"
-              />
+                class="we-are-doing-img" src="./images/computer.jpg" alt="computer" width="360" />
             </li>
             <li class="we-are-doing-list">
               <img class="we-are-doing-img" src="./images/phone.jpg" alt="phone" width="360" />
@@ -136,7 +132,6 @@
                 src="./images/mark.jpg"
                 alt="Mark Guerrero"
                 width="264"
-                height="260"
               />
               <div class="member-team-card">
                 <h3 class="name-member-team">Mark Guerrero</h3>
@@ -174,13 +169,7 @@
               </div>
             </li>
             <li class="member-team">
-              <img
-                class="foto-member-team"
-                src="./images/tom.jpg"
-                alt="Tom Ford"
-                width="264"
-                height="260"
-              />
+              <img class="foto-member-team" src="./images/tom.jpg" alt="Tom Ford" width="264" />
               <div class="member-team-card">
                 <h3 class="name-member-team">Tom Ford</h3>
                 <p class="position-member-team">Frontend Developer</p>
@@ -222,7 +211,6 @@
                 src="./images/camila.jpg"
                 alt="Camila Garcia"
                 width="264"
-                height="260"
               />
               <div class="member-team-card">
                 <h3 class="name-member-team">Camila Garcia</h3>
@@ -265,7 +253,6 @@
                 src="./images/daniel.jpg"
                 alt="Daniel Wilson"
                 width="264"
-                height="260"
               />
               <div class="member-team-card">
                 <h3 class="name-member-team">Daniel Wilson</h3>
