--- a/index.html
+++ b/index.html
@@ -111,7 +111,11 @@
           <ul class="list section-we-are-doing-list">
             <li class="we-are-doing-list">
               <img
-                class="we-are-doing-img" src="./images/computer.jpg" alt="computer" width="360" />
+                class="we-are-doing-img"
+                src="./images/computer.jpg"
+                alt="computer"
+                width="360"
+              />
             </li>
             <li class="we-are-doing-list">
               <img class="we-are-doing-img" src="./images/phone.jpg" alt="phone" width="360" />
