--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <section class="section-hero">
         <div class="container container-hero">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
-          <button class="btn-order-service">Order Service</button>
+          <button class="btn-order-service" data-modal-open>Order Service</button>
         </div>
       </section>
       <section class="section-description section">
@@ -392,6 +392,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black"> href</use>
+          </svg>
+        </button>
+      </div>
+    </div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
