--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -14,8 +14,8 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
+    >
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
 
   <body>
@@ -115,13 +115,13 @@
                 src="./images/computer.jpg"
                 alt="computer"
                 width="360"
-              />
+              >
             </li>
             <li class="we-are-doing-list">
-              <img class="we-are-doing-img" src="./images/phone.jpg" alt="phone" width="360" />
+              <img class="we-are-doing-img" src="./images/phone.jpg" alt="phone" width="360">
             </li>
             <li class="we-are-doing-list">
-              <img class="we-are-doing-img" src="./images/leptop.jpg" alt="leptop" width="360" />
+              <img class="we-are-doing-img" src="./images/leptop.jpg" alt="leptop" width="360">
             </li>
           </ul>
         </div>
@@ -136,7 +136,7 @@
                 src="./images/mark.jpg"
                 alt="Mark Guerrero"
                 width="264"
-              />
+              >
               <div class="member-team-card">
                 <h3 class="name-member-team">Mark Guerrero</h3>
                 <p class="position-member-team">Product Designer</p>
@@ -173,7 +173,7 @@
               </div>
             </li>
             <li class="member-team">
-              <img class="foto-member-team" src="./images/tom.jpg" alt="Tom Ford" width="264" />
+              <img class="foto-member-team" src="./images/tom.jpg" alt="Tom Ford" width="264">
               <div class="member-team-card">
                 <h3 class="name-member-team">Tom Ford</h3>
                 <p class="position-member-team">Frontend Developer</p>
@@ -215,7 +215,7 @@
                 src="./images/camila.jpg"
                 alt="Camila Garcia"
                 width="264"
-              />
+              >
               <div class="member-team-card">
                 <h3 class="name-member-team">Camila Garcia</h3>
                 <p class="position-member-team">Marketing</p>
@@ -257,7 +257,7 @@
                 src="./images/daniel.jpg"
                 alt="Daniel Wilson"
                 width="264"
-              />
+              >
               <div class="member-team-card">
                 <h3 class="name-member-team">Daniel Wilson</h3>
                 <p class="position-member-team">UI Designer</p>
@@ -396,7 +396,7 @@
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
-            <use href="./images/icons.svg#icon-close-black">href</use>
+            <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
       </div>
