--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -14,8 +14,8 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    >
-    <link rel="stylesheet" href="./css/styles.css">
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
@@ -62,7 +62,7 @@
                     src="/images/imgportfolio/bankapp.jpg"
                     alt="Banking App Interface Concept"
                     width="360"
-                  >
+                  />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -81,7 +81,7 @@
                     src="./images/imgportfolio/cashless.jpg"
                     alt="Cashless Payment"
                     width="360"
-                  >
+                  />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -96,7 +96,7 @@
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
                 <div class="overlay-slides">
-                  <img src="./images/imgportfolio/meditaion.jpg" alt="Meditaion App" width="360">
+                  <img src="./images/imgportfolio/meditaion.jpg" alt="Meditaion App" width="360" />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -111,7 +111,7 @@
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
                 <div class="overlay-slides">
-                  <img src="./images/imgportfolio/taxi.jpg" alt="Taxi Service" width="360">
+                  <img src="./images/imgportfolio/taxi.jpg" alt="Taxi Service" width="360" />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -129,7 +129,8 @@
                   <img
                     src="./images/imgportfolio/screen.jpg"
                     alt="Screen Illustrations"
-                    width="360">
+                    width="360"
+                  />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -148,7 +149,7 @@
                     src="./images/imgportfolio/onlinecourses.jpg"
                     alt="Online Courses"
                     width="360"
-                  >
+                  />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -182,7 +183,7 @@
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
                 <div class="overlay-slides">
-                  <img src="./images/imgportfolio/organicfood.jpg" alt="Organic Food" width="360">
+                  <img src="./images/imgportfolio/organicfood.jpg" alt="Organic Food" width="360" />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -197,7 +198,7 @@
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
                 <div class="overlay-slides">
-                  <img src="./images/imgportfolio/freshcoffee.jpg" alt="Fresh Coffee" width="360">
+                  <img src="./images/imgportfolio/freshcoffee.jpg" alt="Fresh Coffee" width="360" />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
