--- a/portfolio.html
+++ b/portfolio.html
@@ -10,12 +10,12 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    />
-    <link rel="stylesheet" href="./css/styles.css" />
+    >
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
 
   <body>
@@ -23,8 +23,7 @@
       <div class="container container-header">
         <nav class="page-nav nav">
           <a class="logo link" href="./index.html"
-            ><span class="logo-title">WEB</span><span class="logo-title-header">STUDIO</span></a
-          >
+            ><span class="logo-title">WEB</span><span class="logo-title-header">STUDIO</span></a>
           <ul class="list nav-list">
             <li class="nav-list-item">
               <a class="nav-link link" href="./index.html">Studio</a>
