--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
     <header class="page-header">
       <div class="container container-header">
         <nav class="page-nav nav">
-          <a class="logo link" href="./index.html"
-            ><span class="logo-title">WEB</span><span class="logo-title-header">STUDIO</span></a
-          >
+          <a class="logo link" href="./index.html"><span class="logo-title">WEB</span><span class="logo-title-header">STUDIO</span></a>
           <ul class="list nav-list">
             <li class="nav-list-item">
               <a class="nav-link link current" href="./index.html">Studio</a>
