--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,9 @@
           <li>
             <a class="link nav-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li><a class="link nav-contact" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a class="link nav-contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </div>
     </header>
