--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
               <a class="link portfolio-page-item" href="">
                 <div class="overlay-slides">
                   <img
-                    src="/images/imgportfolio/bankapp.jpg"
+                    src="./images/imgportfolio/bankapp.jpg"
                     alt="Banking App Interface Concept"
                     width="360"
                   />
