--- a/portfolio.html
+++ b/portfolio.html
@@ -58,8 +58,7 @@
                   <img
                     src="./images/imgportfolio/bankapp.jpg"
                     alt="Banking App Interface Concept"
-                    width="360"
-                  />
+                    width="360">
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -77,8 +76,7 @@
                   <img
                     src="./images/imgportfolio/cashless.jpg"
                     alt="Cashless Payment"
-                    width="360"
-                  />
+                    width="360">
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -93,7 +91,7 @@
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
                 <div class="overlay-slides">
-                  <img src="./images/imgportfolio/meditaion.jpg" alt="Meditaion App" width="360" />
+                  <img src="./images/imgportfolio/meditaion.jpg" alt="Meditaion App" width="360">
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -108,7 +106,7 @@
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
                 <div class="overlay-slides">
-                  <img src="./images/imgportfolio/taxi.jpg" alt="Taxi Service" width="360" />
+                  <img src="./images/imgportfolio/taxi.jpg" alt="Taxi Service" width="360">
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -126,8 +124,7 @@
                   <img
                     src="./images/imgportfolio/screen.jpg"
                     alt="Screen Illustrations"
-                    width="360"
-                  />
+                    width="360">
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -145,8 +142,7 @@
                   <img
                     src="./images/imgportfolio/onlinecourses.jpg"
                     alt="Online Courses"
-                    width="360"
-                  />
+                    width="360">
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -164,8 +160,7 @@
                   <img
                     src="./images/imgportfolio/instagram.jpg"
                     alt="Instagram Stories Concept"
-                    width="360"
-                  />
+                    width="360">
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -180,7 +175,7 @@
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
                 <div class="overlay-slides">
-                  <img src="./images/imgportfolio/organicfood.jpg" alt="Organic Food" width="360" />
+                  <img src="./images/imgportfolio/organicfood.jpg" alt="Organic Food" width="360">
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -195,7 +190,7 @@
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
                 <div class="overlay-slides">
-                  <img src="./images/imgportfolio/freshcoffee.jpg" alt="Fresh Coffee" width="360" />
+                  <img src="./images/imgportfolio/freshcoffee.jpg" alt="Fresh Coffee" width="360">
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
