--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
           </ul>
         </nav>
         <ul class="list nav-list-contact">
-          <li class="nav-list-link-contact">
+          <li class="nav-list-link-cont">
             <a class="link nav-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="nav-list-link-contact">
+          <li class="nav-list-link-cont">
             <a class="link nav-contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
