--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -31,10 +31,10 @@
           </ul>
         </nav>
         <ul class="list nav-list-contact">
-          <li class="nav-list-link-cont">
+          <li class="nav-list-link-contact">
             <a class="link nav-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="nav-list-link-cont">
+          <li class="nav-list-link-contact">
             <a class="link nav-contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
@@ -111,14 +111,13 @@
                 class="we-are-doing-img"
                 src="./images/computer.jpg"
                 alt="computer"
-                width="360"
-              />
+                width="360">
             </li>
             <li class="we-are-doing-list">
-              <img class="we-are-doing-img" src="./images/phone.jpg" alt="phone" width="360" />
+              <img class="we-are-doing-img" src="./images/phone.jpg" alt="phone" width="360">
             </li>
             <li class="we-are-doing-list">
-              <img class="we-are-doing-img" src="./images/leptop.jpg" alt="leptop" width="360" />
+              <img class="we-are-doing-img" src="./images/leptop.jpg" alt="leptop" width="360">
             </li>
           </ul>
         </div>
@@ -132,8 +131,7 @@
                 class="foto-member-team"
                 src="./images/mark.jpg"
                 alt="Mark Guerrero"
-                width="264"
-              />
+                width="264">
               <div class="member-team-card">
                 <h3 class="name-member-team">Mark Guerrero</h3>
                 <p class="position-member-team">Product Designer</p>
@@ -170,7 +168,7 @@
               </div>
             </li>
             <li class="member-team">
-              <img class="foto-member-team" src="./images/tom.jpg" alt="Tom Ford" width="264" />
+              <img class="foto-member-team" src="./images/tom.jpg" alt="Tom Ford" width="264">
               <div class="member-team-card">
                 <h3 class="name-member-team">Tom Ford</h3>
                 <p class="position-member-team">Frontend Developer</p>
@@ -211,8 +209,7 @@
                 class="foto-member-team"
                 src="./images/camila.jpg"
                 alt="Camila Garcia"
-                width="264"
-              />
+                width="264">
               <div class="member-team-card">
                 <h3 class="name-member-team">Camila Garcia</h3>
                 <p class="position-member-team">Marketing</p>
@@ -253,8 +250,7 @@
                 class="foto-member-team"
                 src="./images/daniel.jpg"
                 alt="Daniel Wilson"
-                width="264"
-              />
+                width="264">
               <div class="member-team-card">
                 <h3 class="name-member-team">Daniel Wilson</h3>
                 <p class="position-member-team">UI Designer</p>
