--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet">
@@ -31,10 +31,10 @@
           </ul>
         </nav>
         <ul class="list nav-list-contact">
-          <li class="nav-list-link-cont">
+          <li class="nav-list-link-contact">
             <a class="link nav-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="nav-list-link-cont">
+          <li class="nav-list-link-contact">
             <a class="link nav-contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
