--- a/portfolio.html
+++ b/portfolio.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet">
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
-    <link rel="stylesheet" href="./css/styles.css">
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      rel="stylesheet"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
@@ -19,7 +26,8 @@
       <div class="container container-header">
         <nav class="page-nav nav">
           <a class="logo link" href="./index.html"
-            ><span class="logo-title">WEB</span><span class="logo-title-header">STUDIO</span></a>
+            ><span class="logo-title">WEB</span><span class="logo-title-header">STUDIO</span></a
+          >
           <ul class="list nav-list">
             <li class="nav-list-item">
               <a class="nav-link link" href="./index.html">Studio</a>
@@ -58,7 +66,8 @@
                   <img
                     src="./images/imgportfolio/bankapp.jpg"
                     alt="Banking App Interface Concept"
-                    width="360">
+                    width="360"
+                  />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -76,7 +85,8 @@
                   <img
                     src="./images/imgportfolio/cashless.jpg"
                     alt="Cashless Payment"
-                    width="360">
+                    width="360"
+                  />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -91,7 +101,7 @@
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
                 <div class="overlay-slides">
-                  <img src="./images/imgportfolio/meditaion.jpg" alt="Meditaion App" width="360">
+                  <img src="./images/imgportfolio/meditaion.jpg" alt="Meditaion App" width="360" />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -106,7 +116,7 @@
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
                 <div class="overlay-slides">
-                  <img src="./images/imgportfolio/taxi.jpg" alt="Taxi Service" width="360">
+                  <img src="./images/imgportfolio/taxi.jpg" alt="Taxi Service" width="360" />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -124,7 +134,8 @@
                   <img
                     src="./images/imgportfolio/screen.jpg"
                     alt="Screen Illustrations"
-                    width="360">
+                    width="360"
+                  />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -142,7 +153,8 @@
                   <img
                     src="./images/imgportfolio/onlinecourses.jpg"
                     alt="Online Courses"
-                    width="360">
+                    width="360"
+                  />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -160,7 +172,8 @@
                   <img
                     src="./images/imgportfolio/instagram.jpg"
                     alt="Instagram Stories Concept"
-                    width="360">
+                    width="360"
+                  />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -175,7 +188,7 @@
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
                 <div class="overlay-slides">
-                  <img src="./images/imgportfolio/organicfood.jpg" alt="Organic Food" width="360">
+                  <img src="./images/imgportfolio/organicfood.jpg" alt="Organic Food" width="360" />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
@@ -190,7 +203,7 @@
             <li class="portfolio-page-list-item">
               <a class="link portfolio-page-item" href="">
                 <div class="overlay-slides">
-                  <img src="./images/imgportfolio/freshcoffee.jpg" alt="Fresh Coffee" width="360">
+                  <img src="./images/imgportfolio/freshcoffee.jpg" alt="Fresh Coffee" width="360" />
                   <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                     Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
