--- a/portfolio.html
+++ b/portfolio.html
@@ -39,11 +39,11 @@
           </ul>
         </nav>
         <ul class="list nav-list-contact">
-          <li class="nav-list-link-contact">
-            <a class="link nav-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <li class="nav-list-link-cont">
+            <a class="nav-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="nav-list-link-contact">
-            <a class="link nav-contact" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <li class="nav-list-link-cont">
+            <a class="nav-contact link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </div>
