--- a/index.html
+++ b/index.html
@@ -38,14 +38,16 @@
             <li class="nav-list-item"><a class="nav-link link" href="">Contacts</a></li>
           </ul>
         </nav>
-        <ul class="list nav-list-contact">
-          <li class="nav-list-link-cont">
-            <a class="nav-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="nav-list-link-cont">
-            <a class="nav-contact link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
+        <address class="address">
+          <ul class="list nav-list-contact">
+            <li class="nav-list-link-cont">
+              <a class="nav-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="nav-list-link-cont">
+              <a class="nav-contact link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
     <main>
